# ros-rover

./: .gitignore
install/: local_setup.sh  setup.sh
install/encoder_publisher/lib/encoder_publisher/: encoder_publisher
install/encoder_publisher/share/encoder_publisher/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/motor_driver/lib/motor_driver/: motor_driver
install/motor_driver/share/motor_driver/: package.sh  package.xml
log/: latest_build
src/encoder_publisher/: package.xml  setup.py
src/launch_rover/: package.xml  setup.cfg  setup.py
src/launch_rover/launch/: bringup.launch.py
src/motor_driver/: setup.py
src/motor_driver/launch/: robot_launch.py
src/motor_driver/motor_driver/: motor_driver.py
src/odometry_publisher/: package.xml  setup.py
src/odometry_publisher/odometry_publisher/: odometry_publisher.py
